[gd_scene load_steps=26 format=3 uid="uid://756yyv5igncm"]

[ext_resource type="PackedScene" uid="uid://dayj48d625g8j" path="res://scenes/testing/test_mesh.tscn" id="1_gcn6a"]
[ext_resource type="Script" uid="uid://dssx8d521xmad" path="res://scripts/demos/single_objects_scene.gd" id="1_syaxu"]
[ext_resource type="Shader" uid="uid://dr8p7qswmtovl" path="res://shaders/non_instanced_pma.gdshader" id="2_saikx"]
[ext_resource type="Texture2D" uid="uid://cvoom7qu4404c" path="res://assets/TEXTURES/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_diff_2k.jpg" id="3_syaxu"]
[ext_resource type="Texture2D" uid="uid://brs1husbmdekd" path="res://assets/TEXTURES/green_metal_rust_2k.blend/textures/green_metal_rust_diff_2k.jpg" id="4_yhhud"]
[ext_resource type="Texture2D" uid="uid://cse8uuw55uf3n" path="res://assets/TEXTURES/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_nor_gl_2k.png" id="5_h2ux0"]
[ext_resource type="Texture2D" uid="uid://c0wg2kmpentsv" path="res://assets/TEXTURES/green_metal_rust_2k.blend/textures/green_metal_rust_nor_gl_2k.png" id="6_pf1it"]
[ext_resource type="Texture2D" uid="uid://bb75x6l3ec5wc" path="res://assets/TEXTURES/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_rough_2k.png" id="7_0viot"]
[ext_resource type="Texture2D" uid="uid://t0xk1rw1uk3x" path="res://assets/TEXTURES/green_metal_rust_2k.blend/textures/green_metal_rust_rough_2k.jpg" id="8_ymd8k"]
[ext_resource type="Theme" uid="uid://b8bdf4l66bp3o" path="res://assets/ui_theme.tres" id="9_saikx"]
[ext_resource type="PackedScene" uid="uid://bb0hcsjqt480m" path="res://scenes/demos/docks_subscenes/old_rusty_car.tscn" id="10_yhhud"]
[ext_resource type="PackedScene" uid="uid://c0heslag3vpps" path="res://scenes/demos/docks_subscenes/three_barrels.tscn" id="11_h2ux0"]
[ext_resource type="PackedScene" uid="uid://bj5pkjogvc3jp" path="res://scenes/demos/docks_subscenes/rusty_anchor.tscn" id="12_pf1it"]
[ext_resource type="PackedScene" uid="uid://cpfct4fthco1e" path="res://scenes/demos/docks_subscenes/yellow_tank.tscn" id="13_0viot"]
[ext_resource type="PackedScene" uid="uid://7brgje74xg8s" path="res://scenes/demos/docks_subscenes/green_tank.tscn" id="14_ymd8k"]
[ext_resource type="PackedScene" uid="uid://bn4m67plorpi5" path="res://scenes/menu/sub_menu.tscn" id="16_rtwaf"]

[sub_resource type="SphereMesh" id="SphereMesh_rtwaf"]

[sub_resource type="Gradient" id="Gradient_ouist"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.6, 0.6, 0.6, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ux7xw"]
gradient = SubResource("Gradient_ouist")
width = 1

[sub_resource type="Gradient" id="Gradient_0xixl"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.4, 0.4, 0.4, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ytkqt"]
gradient = SubResource("Gradient_0xixl")
width = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gcn6a"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_saikx")
shader_parameter/seed = 0
shader_parameter/uv_scale = 1.0
shader_parameter/patch_scale = 2.0
shader_parameter/wear_scale = 2.0
shader_parameter/pit_scale = 8.0
shader_parameter/detail_scale = 100.0
shader_parameter/time_scale = 0.01
shader_parameter/uniform_corrosion_speed = 0.005
shader_parameter/exposure = 1.0
shader_parameter/pit_fbm_iterations = 5
shader_parameter/detail_fbm_iterations = 4
shader_parameter/use_vertex_weight = false
shader_parameter/vertex_weight_scale = 1.0
shader_parameter/vertex_weight_channel = 0
shader_parameter/age = 40.58
shader_parameter/paint_stability = 0.5
shader_parameter/uv_and_heat = 0.5
shader_parameter/pollution = 0.5
shader_parameter/moisture = 0.5
shader_parameter/albedo_base = ExtResource("3_syaxu")
shader_parameter/metallic_base = SubResource("GradientTexture1D_ux7xw")
shader_parameter/roughness_base = ExtResource("7_0viot")
shader_parameter/normal_base = ExtResource("5_h2ux0")
shader_parameter/use_paint_layer = true
shader_parameter/paint_edge_sharpness = 0.98
shader_parameter/paint_yellowing = Color(0.85, 0.85, 0.5, 1)
shader_parameter/paint_yellowing_intensity = 2.5
shader_parameter/albedo_paint = ExtResource("4_yhhud")
shader_parameter/metallic_paint = SubResource("GradientTexture1D_ytkqt")
shader_parameter/roughness_paint = ExtResource("8_ymd8k")
shader_parameter/normal_paint = ExtResource("6_pf1it")
shader_parameter/grime_intensity = 4.0
shader_parameter/grime_falloff = 0.9
shader_parameter/grime_color = Color(0.5, 0.25, 0, 1)
shader_parameter/rust_growth_factor = 200.0
shader_parameter/rust_color_1 = Color(0.5, 0.35, 0, 1)
shader_parameter/rust_color_2 = Color(0.33, 0.22, 0, 1)
shader_parameter/rust_color_3 = Color(0.2, 0.01, 0.02, 1)
shader_parameter/rust_color_4 = Color(0.125, 0.035, 0.075, 1)
shader_parameter/rust_red_shift = 0.25
shader_parameter/rust_green_shift = 0.06

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dvg6f"]
sky_top_color = Color(0.55, 0.55, 0.55, 1)
energy_multiplier = 5.0

[sub_resource type="Sky" id="Sky_rtwaf"]
sky_material = SubResource("ProceduralSkyMaterial_dvg6f")

[sub_resource type="Environment" id="Environment_c3e8e"]
background_mode = 1
background_color = Color(0.08, 0.08, 0.08, 1)
sky = SubResource("Sky_rtwaf")
ambient_light_source = 3
reflected_light_source = 2

[node name="SingleObjects" type="Node3D" node_paths=PackedStringArray("objects")]
script = ExtResource("1_syaxu")
objects = {
NodePath("Objects/default_sphere"): 0,
NodePath("Objects/old_rusty_car/Sketchfab_model/oldcar_FBX/RootNode/Object007/Car"): 1,
NodePath("Objects/three_barrels/Sketchfab_model/Mainv2_obj_cleaner_materialmerger_gles/Object_4"): 0,
NodePath("Objects/rusty_anchor/Sketchfab_model/Collada visual scene group/Line001/defaultMaterial_002"): 0,
NodePath("Objects/yellow_tank/Sketchfab_model/9fb78655edda40b6bc435c9c02f93a04_fbx/RootNode/valve_small1/valve_small1_valve1_0"): 1,
NodePath("Objects/green_tank/Sketchfab_model/9fb78655edda40b6bc435c9c02f93a04_fbx/RootNode/valve_small1/valve_small1_valve1_0"): 3
}

[node name="Objects" type="Node3D" parent="."]

[node name="default_sphere" parent="Objects" instance=ExtResource("1_gcn6a")]
transform = Transform3D(1.0027082, 0, 0, 0, 1.002708, 0, 0, 0, 1.0027097, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_rtwaf")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_gcn6a")
script = null

[node name="old_rusty_car" parent="Objects" instance=ExtResource("10_yhhud")]
transform = Transform3D(0.01656828, 0.009342902, 0.028539099, -2.5519356e-09, 0.03259473, -0.010670603, -0.030029483, 0.005154793, 0.01574598, 0, 0, 0)
visible = false

[node name="three_barrels" parent="Objects" instance=ExtResource("11_h2ux0")]
transform = Transform3D(-0.0068953265, 0, 0.017250901, 0, 0.018577917, 0, -0.017250901, 0, -0.0068953265, 0, -0.3827195, 0)
visible = false

[node name="rusty_anchor" parent="Objects" instance=ExtResource("12_pf1it")]
transform = Transform3D(-0.052314416, 0.025728619, 0.021541176, 0.024439542, 0.056553908, -0.008194247, -0.022993308, 0.0015732427, -0.057720147, 0, 0.12222946, 0)
visible = false

[node name="yellow_tank" parent="Objects" instance=ExtResource("13_0viot")]
transform = Transform3D(0.0059759193, 0.10380397, 0.45023385, 2.1189606e-09, 0.45027143, -0.10381265, -0.4620451, 0.0013425639, 0.005823162, 0, -0.08956823, 0)
visible = false

[node name="green_tank" parent="Objects" instance=ExtResource("14_ymd8k")]
transform = Transform3D(-0.089185745, 0.21283947, 0.3613835, 0.050996564, 0.37222594, -0.20663974, -0.4162908, -5.8331118e-12, -0.10273629, 0, -0.3525887, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]
transform = Transform3D(0.76021624, 0.3625422, 0.5391052, -0.6095464, 0.1109274, 0.78495115, 0.22477639, -0.92534226, 0.3053151, 2.07682, 5.80568, 0.86998)
light_energy = 1.5
shadow_enabled = true
shadow_opacity = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c3e8e")

[node name="UI" type="Panel" parent="."]
offset_right = 375.0
offset_bottom = 385.0
theme = ExtResource("9_saikx")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 365.0
offset_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Select object" type="OptionButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "default_sphere"
popup/item_0/id = 0
popup/item_1/text = "old_rusty_car"
popup/item_1/id = 1
popup/item_2/text = "three_barrels"
popup/item_2/id = 2
popup/item_3/text = "rusty_anchor"
popup/item_3/id = 3
popup/item_4/text = "yellow_tank"
popup/item_4/id = 4
popup/item_5/text = "green_tank"
popup/item_5/id = 5

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RotationLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rotation"

[node name="RotationSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 6.283
step = 0.01

[node name="RotationAxis" type="OptionButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "y"
popup/item_0/id = 0
popup/item_1/text = "z"
popup/item_1/id = 1

[node name="Distance" type="SpinBox" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
step = 0.01
value = 1.0
allow_greater = true
prefix = "Distance: "

[node name="HSeparator2" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Age"

[node name="AgeSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 300.0
allow_greater = true

[node name="HSeparator3" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeedInput" type="SpinBox" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
allow_greater = true
prefix = "Seed:"

[node name="HSeparator4" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UVLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "UV and heat"

[node name="UVSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="PollutionLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pollution"

[node name="PollutionSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MoistureLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Moisture"

[node name="MoistureSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSeparator5" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StabilityLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paint stability"

[node name="StabilitySlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SubMenu" parent="." instance=ExtResource("16_rtwaf")]

[connection signal="item_selected" from="UI/MarginContainer/VBoxContainer/Select object" to="." method="set_object"]
[connection signal="value_changed" from="UI/MarginContainer/VBoxContainer/RotationSlider" to="." method="rotate_cam"]
[connection signal="item_selected" from="UI/MarginContainer/VBoxContainer/RotationAxis" to="." method="set_rotation_axis"]
[connection signal="value_changed" from="UI/MarginContainer/VBoxContainer/Distance" to="." method="set_distance"]
